bot_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tftpoelinkbot-deployment
  namespace: james
  labels:
    app: tftpoelinkbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tftpoelinkbot
  template:
    metadata:
      labels:
        app: tftpoelinkbot
    spec:
      containers:
        - name: tftpoelinkbot
          image: "harbor.teamfrag.net/private/tftpoelinkbot/tftpoelinkbot:latest"
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 8082
              protocol: TCP
