server_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tftpoelinkserver-deployment
  namespace: james
  labels:
    app: tftpoelinkserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tftpoelinkserver
  template:
    metadata:
      labels:
        app: tftpoelinkserver
    spec:
      containers:
        - name: tftpoelinkserver
          image: 'harbor.teamfrag.net/private/tftpoelinkserver/tftpoelinkserver:latest'
          ports:
            - containerPort: 4050
              protocol: TCP
