service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tftpoelinkserver-service
  namespace: james
spec:
  ports:
    - protocol: TCP
      port: 4050
  selector:
    app: tftpoelinkserver
